// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PastReportsSidebarが正しく表示される > 今日の日報が選択された状態で表示される 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kak0am"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-31h6qn-MuiTypography-root"
    >
      日報一覧
    </h6>
    <ul
      class="MuiList-root MuiList-padding css-13rb8qi-MuiList-root"
    >
      <button
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nbyyxq-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-64nssn-MuiTypography-root"
          >
            今日の日報
          </span>
          <p
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-3k0zn9-MuiTypography-root"
          >
            編集可能
          </p>
        </div>
      </button>
      <button
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-wjrk7s-MuiListItem-root"
      >
        <div
          class="MuiBox-root css-8atqhb"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ii4reh-MuiTypography-root"
          >
            6月19日(水)
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1oq2vc5-MuiTypography-root"
          >
            開発、会議、レビュー
          </p>
          <div
            class="MuiBox-root css-107ld1r"
          >
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-q1fxe1-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                開発
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-q1fxe1-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                times_esa
              </span>
            </div>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-1rrr8pd-MuiTypography-root"
          >
            5個のつぶやき
          </span>
        </div>
      </button>
      <button
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-wjrk7s-MuiListItem-root"
      >
        <div
          class="MuiBox-root css-8atqhb"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ii4reh-MuiTypography-root"
          >
            6月18日(火)
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1oq2vc5-MuiTypography-root"
          >
            レビュー、設計
          </p>
          <div
            class="MuiBox-root css-107ld1r"
          >
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-q1fxe1-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                設計
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-q1fxe1-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                レビュー
              </span>
            </div>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-1rrr8pd-MuiTypography-root"
          >
            3個のつぶやき
          </span>
        </div>
      </button>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PastReportsSidebarが正しく表示される > 空の日報リストでも正しく表示される 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kak0am"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-31h6qn-MuiTypography-root"
    >
      日報一覧
    </h6>
    <ul
      class="MuiList-root MuiList-padding css-13rb8qi-MuiList-root"
    >
      <button
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nbyyxq-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-64nssn-MuiTypography-root"
          >
            今日の日報
          </span>
          <p
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-3k0zn9-MuiTypography-root"
          >
            編集可能
          </p>
        </div>
      </button>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PastReportsSidebarが正しく表示される > 過去の日報が選択された状態で表示される 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kak0am"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-31h6qn-MuiTypography-root"
    >
      日報一覧
    </h6>
    <ul
      class="MuiList-root MuiList-padding css-13rb8qi-MuiList-root"
    >
      <button
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-58bp3r-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-plhci5-MuiTypography-root"
          >
            今日の日報
          </span>
          <p
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-3k0zn9-MuiTypography-root"
          >
            編集可能
          </p>
        </div>
      </button>
      <button
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-q8c0aq-MuiListItem-root"
      >
        <div
          class="MuiBox-root css-8atqhb"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-spsapl-MuiTypography-root"
          >
            6月19日(水)
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1oq2vc5-MuiTypography-root"
          >
            開発、会議、レビュー
          </p>
          <div
            class="MuiBox-root css-107ld1r"
          >
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-q1fxe1-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                開発
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-q1fxe1-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                times_esa
              </span>
            </div>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-1rrr8pd-MuiTypography-root"
          >
            5個のつぶやき
          </span>
        </div>
      </button>
      <button
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-wjrk7s-MuiListItem-root"
      >
        <div
          class="MuiBox-root css-8atqhb"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ii4reh-MuiTypography-root"
          >
            6月18日(火)
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1oq2vc5-MuiTypography-root"
          >
            レビュー、設計
          </p>
          <div
            class="MuiBox-root css-107ld1r"
          >
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-q1fxe1-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                設計
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-q1fxe1-MuiChip-root"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
              >
                レビュー
              </span>
            </div>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-1rrr8pd-MuiTypography-root"
          >
            3個のつぶやき
          </span>
        </div>
      </button>
    </ul>
  </div>
</DocumentFragment>
`;
